Few changes in search query and showListing.ejs

--- a/views/listings/showListing.ejs
+++ b/views/listings/showListing.ejs
@@ -16,12 +16,13 @@
             <%=listingData.description%>
           </p>
         </div>
+        <br />
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Location - <%=listingData.location%></li>
           <li class="list-group-item">Country - <%=listingData.country%></li>
           <li class="list-group-item">Category - <%=listingData.category%></li>
           <li class="list-group-item">
-            Added By - <%=listingData.owner.username%>
+            This Place is Added By - <%=listingData.owner.username%>
           </li>
         </ul>
       </div>
