--- a/views/user/signUp.ejs
+++ b/views/user/signUp.ejs
@@ -58,11 +58,7 @@
 
         <div class="log">
           Already have an account?
-          <form action="user/signIn" method="get">
-            <button class="login" style="border: none; background: transparent;color: blue;">
-              Sign In
-            </button>
-          </form>
+          <a href="user/signIn" class="login">Log in</a>
         </div>
         <button class="btn btn-outline-primary">Sign Up</button>
       </form>
