Login fixed agai :/

--- a/views/user/signIn.ejs
+++ b/views/user/signIn.ejs
@@ -46,7 +46,7 @@
 
         <div class="log">
           Don't have an account ?
-          <a href="user/signUp" class="login">Sign Up</a>
+          <a href="/signUp" class="login">Sign Up</a>
         </div>
         <button class="btn btn-outline-primary">Sign In</button>
       </form>
