--- a/views/user/signUp.ejs
+++ b/views/user/signUp.ejs
@@ -58,7 +58,7 @@
 
         <div class="log">
           Already have an account?
-          <a href="user/signIn" class="login">Log in</a>
+          <a href="/signIn" class="login">Log in</a>
         </div>
         <button class="btn btn-outline-primary">Sign Up</button>
       </form>
