--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -70,7 +70,7 @@
             </li>
             <%}%>
             <li>
-              <a class="dropdown-item" href="#">Add a place</a>
+              <a class="dropdown-item" href="/listings/new">Add a place</a>
             </li>
             <li>
               <form action="/user/logout" method="get">
